lab2/Arithmetic/Terminal Saved Output
Last login: Wed Feb  4 23:10:31 on console
airbears2-10-142-34-88:~ andreaskarinam$ cd Developer/CS61B/ayq/
airbears2-10-142-34-88:ayq andreaskarinam$ git pull skeleton origin
fatal: Couldn't find remote ref origin
Unexpected end of command stream
airbears2-10-142-34-88:ayq andreaskarinam$ git pull skeleton origin
fatal: Couldn't find remote ref origin
Unexpected end of command stream
airbears2-10-142-34-88:ayq andreaskarinam$ git pull skeleton master
remote: Counting objects: 58, done.
remote: Compressing objects: 100% (56/56), done.
remote: Total 58 (delta 20), reused 38 (delta 0)
Unpacking objects: 100% (58/58), done.
From https://github.com/Berkeley-CS61B/skeleton
 * branch            master     -> FETCH_HEAD
   97ebda5..090c93d  master     -> skeleton/master
Merge made by the 'recursive' strategy.
 lab3/DoubleChain.java              |  61 +++
 lab3/Flik.java                     |  18 +
 lab3/Hopper.java                   |  22 ++
 lab3/StringList.java               |  22 ++
 lab3/TestDoubleChain.java          |  37 ++
 lab3/answer.txt                    |   0
 lab3/magic_word.txt                |   1 +
 lib/gjdb.jar                       | Bin 0 -> 191255 bytes
 lib/staffp0_obf.jar                | Bin 0 -> 8529 bytes
 proj0/StdDrawDemo.java             |  45 +++
 proj0/StdDrawPlus.java             | 757 +++++++++++++++++++++++++++++++++++++
 proj0/img/bomb-fire-crowned.png    | Bin 0 -> 65221 bytes
 proj0/img/bomb-fire.png            | Bin 0 -> 49240 bytes
 proj0/img/bomb-water-crowned.png   | Bin 0 -> 89493 bytes
 proj0/img/bomb-water.png           | Bin 0 -> 74165 bytes
 proj0/img/iconcredits.txt          |  13 +
 proj0/img/pawn-fire-crowned.png    | Bin 0 -> 118863 bytes
 proj0/img/pawn-fire.png            | Bin 0 -> 96596 bytes
 proj0/img/pawn-water-crowned.png   | Bin 0 -> 91460 bytes
 proj0/img/pawn-water.png           | Bin 0 -> 93558 bytes
 proj0/img/shield-fire-crowned.png  | Bin 0 -> 61381 bytes
 proj0/img/shield-fire.png          | Bin 0 -> 43909 bytes
 proj0/img/shield-water-crowned.png | Bin 0 -> 54426 bytes
 proj0/img/shield-water.png         | Bin 0 -> 38453 bytes
 24 files changed, 976 insertions(+)
 create mode 100644 lab3/DoubleChain.java
 create mode 100644 lab3/Flik.java
 create mode 100644 lab3/Hopper.java
 create mode 100644 lab3/StringList.java
 create mode 100644 lab3/TestDoubleChain.java
 create mode 100644 lab3/answer.txt
 create mode 100644 lab3/magic_word.txt
 create mode 100644 lib/gjdb.jar
 create mode 100644 lib/staffp0_obf.jar
 create mode 100644 proj0/StdDrawDemo.java
 create mode 100644 proj0/StdDrawPlus.java
 create mode 100644 proj0/img/bomb-fire-crowned.png
 create mode 100644 proj0/img/bomb-fire.png
 create mode 100644 proj0/img/bomb-water-crowned.png
 create mode 100644 proj0/img/bomb-water.png
 create mode 100644 proj0/img/iconcredits.txt
 create mode 100644 proj0/img/pawn-fire-crowned.png
 create mode 100644 proj0/img/pawn-fire.png
 create mode 100644 proj0/img/pawn-water-crowned.png
 create mode 100644 proj0/img/pawn-water.png
 create mode 100644 proj0/img/shield-fire-crowned.png
 create mode 100644 proj0/img/shield-fire.png
 create mode 100644 proj0/img/shield-water-crowned.png
 create mode 100644 proj0/img/shield-water.png
airbears2-10-142-34-88:ayq andreaskarinam$ git branch
  ag/hw1
  ag/hw2
  ag/lab1
  ag/lab2
* master
  submit/hw1
  submit/hw2
  submit/lab1
  submit/lab2
airbears2-10-142-34-88:ayq andreaskarinam$ cd lab3
airbears2-10-142-34-88:lab3 andreaskarinam$ javac TestDoubleChain.java 
airbears2-10-142-34-88:lab3 andreaskarinam$ ls
DoubleChain$1.class	Flik.java		TestDoubleChain.java
DoubleChain$DNode.class	Hopper.java		answer.txt
DoubleChain.class	StringList.java		magic_word.txt
DoubleChain.java	TestDoubleChain.class
airbears2-10-142-34-88:lab3 andreaskarinam$ java TestDoubleChain
Time: 0.023
There were 1 failures:

1) testBasicOperations(TestDoubleChain)
    java.lang.NullPointerException
    at TestDoubleChain.testBasicOperations:24 (TestDoubleChain.java)

Ran 2 tests. 1 failed.
airbears2-10-142-34-88:lab3 andreaskarinam$ javac TestDoubleChain.java DoubleChain.java 
DoubleChain.java:19: error: cannot find symbol
		while (pointer.getFront().next != null) {
		              ^
  symbol:   method getFront()
  location: variable pointer of type DNode
1 error
airbears2-10-142-34-88:lab3 andreaskarinam$ javac TestDoubleChain.java DoubleChain.java 
airbears2-10-142-34-88:lab3 andreaskarinam$ java TestDoubleChain
Time: 0.016
There were 1 failures:

1) testBasicOperations(TestDoubleChain)
    expected:<1.0> but was:<5.0>
    at TestDoubleChain.testBasicOperations:30 (TestDoubleChain.java)

Ran 2 tests. 1 failed.
airbears2-10-142-34-88:lab3 andreaskarinam$ javac TestDoubleChain.java DoubleChain.java 
DoubleChain.java:28: error: cannot find symbol
		head = DNode(null, d, head);
		       ^
  symbol:   method DNode(<null>,double,DNode)
  location: class DoubleChain
DoubleChain.java:35: error: cannot find symbol
		back = DNode(getBack(), d, null);
		^
  symbol:   variable back
  location: class DoubleChain
DoubleChain.java:35: error: cannot find symbol
		back = DNode(getBack(), d, null);
		       ^
  symbol:   method DNode(DNode,double,<null>)
  location: class DoubleChain
DoubleChain.java:36: error: package back does not exist
		back.prev.next = back;
		    ^
DoubleChain.java:36: error: cannot find symbol
		back.prev.next = back;
		                 ^
  symbol:   variable back
  location: class DoubleChain
5 errors
airbears2-10-142-34-88:lab3 andreaskarinam$ javac TestDoubleChain.java DoubleChain.java 
airbears2-10-142-34-88:lab3 andreaskarinam$ java TestDoubleChain
Time: 0.007
Ran 2 tests. All passed.
airbears2-10-142-34-88:lab3 andreaskarinam$ javac TestDoubleChain.java DoubleChain.java 
airbears2-10-142-34-88:lab3 andreaskarinam$ java TestDoubleChain
Time: 0.006
Ran 2 tests. All passed.
airbears2-10-142-34-88:lab3 andreaskarinam$ javac TestDoubleChain.java DoubleChain.java 
TestDoubleChain.java:44: error: ';' expected
        assertEquals("<[1, 2, 5, 7, 8]>", d.toString())
                                                       ^
DoubleChain.java:56: error: ';' expected
		return str + "]>"
		                 ^
2 errors
airbears2-10-142-34-88:lab3 andreaskarinam$ javac TestDoubleChain.java DoubleChain.java 
TestDoubleChain.java:44: error: ';' expected
        assertEquals("<[1, 2, 5, 7, 8]>", d.toString())
                                                       ^
1 error
airbears2-10-142-34-88:lab3 andreaskarinam$ javac TestDoubleChain.java DoubleChain.java 
airbears2-10-142-34-88:lab3 andreaskarinam$ java TestDoubleChain
Time: 0.035
There were 1 failures:

1) testToString(TestDoubleChain)
    java.lang.NullPointerException
    at DoubleChain.toString:50 (DoubleChain.java)
    at TestDoubleChain.testToString:38 (TestDoubleChain.java)

Ran 3 tests. 1 failed.
airbears2-10-142-34-88:lab3 andreaskarinam$ javac TestDoubleChain.java DoubleChain.java 
airbears2-10-142-34-88:lab3 andreaskarinam$ java TestDoubleChain
Time: 0.014
There were 1 failures:

1) testToString(TestDoubleChain)
    java.lang.NullPointerException
    at DoubleChain.toString:50 (DoubleChain.java)
    at TestDoubleChain.testToString:38 (TestDoubleChain.java)

Ran 3 tests. 1 failed.
airbears2-10-142-34-88:lab3 andreaskarinam$ javac TestDoubleChain.java DoubleChain.java 
TestDoubleChain.java:44: error: cannot find symbol
        System.out.println(d.toString);
                            ^
  symbol:   variable toString
  location: variable d of type DoubleChain
1 error
airbears2-10-142-34-88:lab3 andreaskarinam$ javac TestDoubleChain.java DoubleChain.java 
airbears2-10-142-34-88:lab3 andreaskarinam$ java TestDoubleChain
Time: 0.011
There were 1 failures:

1) testToString(TestDoubleChain)
    java.lang.NullPointerException
    at DoubleChain.toString:50 (DoubleChain.java)
    at TestDoubleChain.testToString:38 (TestDoubleChain.java)

Ran 3 tests. 1 failed.
airbears2-10-142-34-88:lab3 andreaskarinam$ javac TestDoubleChain.java DoubleChain.java 
airbears2-10-142-34-88:lab3 andreaskarinam$ java TestDoubleChain
Time: 0.010
There were 1 failures:

1) testToString(TestDoubleChain)
    java.lang.NullPointerException
    at DoubleChain.toString:50 (DoubleChain.java)
    at TestDoubleChain.testToString:38 (TestDoubleChain.java)

Ran 3 tests. 1 failed.
airbears2-10-142-34-88:lab3 andreaskarinam$ 
